compiler/testData/cli/jvm/noStdlibK2.out
compiler/testData/cli/jvm/noStdlibK1.kt:4:19: error: unresolved reference 'primaryConstructor'.
    String::class.primaryConstructor
                  ^^^^^^^^^^^^^^^^^^
compiler/testData/cli/jvm/noStdlibK1.kt:7:5: error: unresolved reference 'listOf'.
    listOf(42)
    ^^^^^^
COMPILATION_ERROR
